# sh4-apps

./: README.md  acinclude.m4
tools/aio-grab/: main.c
tools/devinit/: devinit.c
tools/dynamite_control/: Makefile.am  autogen.sh  (+4 more)
tools/stapi_control/: Makefile.am  autogen.sh  clilib.h  linuxcommon.h  linuxwrapper.h  main.c  os_20to21_map.h  stapi_init.c  testtool.h
tools/stapi_control/include/apilib/: staudlx.h  stavmem.h  stblit.h  stbuffer.h  stcc.h  stclkrv.h  stcommon.h  stddefs.h  stdebug_main.h  stdenc.h  stdevice.h  stevt.h  stfdma.h  stfrontend.h  stgxobj.h  sthdmi.h  sti2c.h  stinject.h  stlayer.h  stmmdefs.h  stpio.h  stpower.h  stpti.h  stpti4.hh  stpti5.h  stpwm.h  strm.h  stsubt.h  sttbx.h  sttrace.h  stttx.h  stuart.h  stvbi.h  stvid.h  stvin.h  stvmix.h  stvout.h  stvtg.h
tools/stapi_control/include/stapp/: stapp_atapi.h  stapp_audio.h  stapp_blast.h  stapp_blit.h  stapp_cc.h  stapp_clkrv.h  stapp_crypt.h  stapp_demux.h  stapp_denc.h  stapp_dma.h  stapp_drm.h  stapp_event.h  stapp_flash.h  stapp_fsk.h  stapp_gamloader.h  stapp_grafix.h  stapp_gui.h  stapp_hdmi.h  stapp_i2c.h  stapp_inject.h  stapp_iprc.h  stapp_keyscn.h  stapp_layer.h  stapp_main.h  stapp_mbx.h  stapp_moca.h  stapp_os.h  stapp_pccrd.h  stapp_pcpd.h  stapp_pios.h  stapp_playrec.h  stapp_pod.h  stapp_power.h  stapp_pwm.h  stapp_reset.h  stapp_rm.h  stapp_scart.h  stapp_smart.h  stapp_smoothstreaming.h  stapp_spi.h  (+20 more)
tools/stapi_control/internal/: hdmi_feature.h  vout_feature.h
tools/stapi_control/playrec/: playrec.h  tag.h
tools/stapi_control/traces/: traces_global_define.h
(+76 files in other folders)
